--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,42 @@
-<p>por-pais works!</p>
+<h2>Por Pais</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form autocomplete="off" (ngSubmit)="buscar()">
+            <input type="text" name="termino" placeholder="Buscar por Pais..." class="form-control" [(ngModel)]="termino">
+        </form>
+    </div>
+</div>
+
+<hr>
+<div class="alert alert-danger" *ngIf="Error">
+    No se encontro nada con el término {{termino}}
+</div>
+
+<div class="row" *ngIf="!Error">
+    <div class="col">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Bandera</th>
+                    <th>Nombre</th>
+                    <th>Poblacion</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Bancedra</td>
+                    <td>nombre</td>
+                    <td>123123123</td>
+                    <td>
+                        <a href="/pais/per">Ver...</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
