--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,11 @@
-<p>sidebar works!</p>
+<h2>Busquedas</h2>
+<hr>
+<ul class="list-group">
+
+    <!-- Esto es solo si el path es vacio y es pathmach full -->
+    <li class="list-group-item" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Buscar
+        pais</li>
+
+    <li class="list-group-item" routerLink="region" routerLinkActive="active">Por region</li>
+    <li class="list-group-item" routerLink="capital" routerLinkActive="active">Por capital</li>
+</ul>
