--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,9 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off" (ngSubmit)="buscar()">
-            <input type="text" name="termino" placeholder="Buscar por Pais..." class="form-control" [(ngModel)]="termino">
-        </form>
+        <app-pais-input placeholder="Buscar pais..." (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)"></app-pais-input>
     </div>
 </div>
 
@@ -14,29 +12,8 @@
     No se encontro nada con el término {{termino}}
 </div>
 
-<div class="row" *ngIf="!Error">
+<div class="row" *ngIf="Paises.length != 0">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Poblacion</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bancedra</td>
-                    <td>nombre</td>
-                    <td>123123123</td>
-                    <td>
-                        <a href="/pais/per">Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-tabla [Paises]="Paises"></app-pais-tabla>
     </div>
 </div>
