--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,18 +1,27 @@
-<h3>Buscar por region <small>{{regionActiva | titlecase}} </small></h3>
-<hr>
-<h5>Selecciona la region</h5>
-<div class="row">
+<div class="animate__animated animate__fadeIn">
+
+    <h3>Buscar por region <small>{{regionActiva | titlecase}} </small></h3>
+    <hr>
+    <h5>Selecciona la region</h5>
+    <div class="row">
+        <div class="col">
+            <!-- [class.btn-primary]="region === regionActiva" -->
+            <!-- [ngClass]="{
+                'btn-outline-primary': region !== regionActiva,
+                'btn-primary': region === regionActiva
+            }" -->
+            <button *ngFor="let region of regiones" 
+            [class]="getClaseCSS(region)"
+            style="margin-right: 0.5rem;"
+            (click)="activarRegion(region)">
+                {{region | titlecase}}
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="row" *ngIf="paises.length != 0">
     <div class="col">
-        <!-- [class.btn-primary]="region === regionActiva" -->
-        <!-- [ngClass]="{
-            'btn-outline-primary': region !== regionActiva,
-            'btn-primary': region === regionActiva
-        }" -->
-        <button *ngFor="let region of regiones" 
-        class="btn btn-outline-primary"
-        style="margin-right: 1rem;"
-        (click)="activarRegion(region)">
-            {{region | titlecase}}
-        </button>
+        <app-pais-tabla [Paises]="paises"></app-pais-tabla>
     </div>
 </div>
