--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -9,7 +9,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of Paises; let i = index">
+        <tr *ngFor="let pais of Paises; let i = index" class="animate__animated animate__fadeIn">
             <td>{{i + 1}}</td>
             <td><img [src]="pais.flags.png" alt="" style="width: 50px;"></td>
             <td>{{pais.name.common}} - {{pais.capital}}</td>
