--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,19 +1,22 @@
-<h2>Por Capital</h2>
-<hr>
+<div class="animate__animated animate__fadeIn">
 
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar capital..."></app-pais-input>
+    <h2>Por Capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar capital..."></app-pais-input>
+        </div>
     </div>
-</div>
-
-<hr>
-<div class="alert alert-danger" *ngIf="Error">
-    No se encontro nada con el término {{termino}}
-</div>
-
-<div class="row" *ngIf="Paises.length != 0">
-    <div class="col">
-        <app-pais-tabla [Paises]="Paises"></app-pais-tabla>
+    
+    <hr>
+    <div class="alert alert-danger" *ngIf="Error">
+        No se encontro nada con el término {{termino}}
+    </div>
+    
+    <div class="row" *ngIf="Paises.length != 0">
+        <div class="col">
+            <app-pais-tabla [Paises]="Paises" ></app-pais-tabla>
+        </div>
     </div>
 </div>
