--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,19 +1,33 @@
-<h2>Por Pais</h2>
-<hr>
+<div class="animate__animated animate__fadeIn">
 
-<div class="row">
-    <div class="col">
-        <app-pais-input placeholder="Buscar pais..." (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)"></app-pais-input>
+    <h2>Por Pais</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input placeholder="Buscar pais..." (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)"></app-pais-input>
+        </div>
     </div>
-</div>
 
-<hr>
-<div class="alert alert-danger" *ngIf="Error">
-    No se encontro nada con el término {{termino}}
-</div>
-
-<div class="row" *ngIf="Paises.length != 0">
-    <div class="col">
-        <app-pais-tabla [Paises]="Paises"></app-pais-tabla>
+    <ul class="list-group" *ngIf="showSugerencias">
+        <li class="list-group-item list-group-item-action" style="cursor: pointer;" *ngFor="let pais of paisesSugeridos">
+            <a class="nav-link" [routerLink]="['/pais', pais.cca3]">{{pais.name.common}}</a>
+            
+        </li>
+        <li class="list-group-item list-group-item-action" style="cursor: pointer;">
+            <a class="nav-link" (click)="buscarSugerido(termino)">Buscar "{{termino}}"</a>
+            
+        </li>
+    </ul>
+    
+    <hr>
+    <div class="alert alert-danger" *ngIf="Error">
+        No se encontro nada con el término {{termino}}
+    </div>
+    
+    <div class="row" *ngIf="Paises.length != 0">
+        <div class="col">
+            <app-pais-tabla [Paises]="Paises"></app-pais-tabla>
+        </div>
     </div>
 </div>
